fix settings page gap not shrinking when resizing

--- a/base.css
+++ b/base.css
@@ -4842,7 +4842,8 @@ html {
     padding: 16px;
 }
 #app-mount .contentColumnDefault-3eyv5o {
-    padding: 16px 30vh 24px;
+    max-width: 50vw;
+    margin: auto;
 }
 
 /* Server Upload Image */
